--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,27 @@
+.nav_ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #333;
+}
+
+.nav_li {
+	float: left;
+}
+
+.nav_a {
+	display: inline-block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+.nav_a:hover {
+	background-color: #111;
+}
+
 .current {
 	color: green;
 }
