--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -15,6 +15,7 @@
   }
   .nav_a {
     width: 100%;
+    font-size: 2em;
   }
 }
 
@@ -24,6 +25,7 @@
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
+	font-weight: bold;
 }
 
 .nav_a:hover {
