--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,15 +9,6 @@
 .nav_li {
 	float: left;
 }
-@media (max-width: 1000px) {
-  .nav_li {
-    float: none;
-  }
-  .nav_a {
-    width: 100%;
-    font-size: 2em;
-  }
-}
 
 .nav_a {
 	display: inline-block;
@@ -37,3 +28,15 @@
 }
 
 img[alt=bild] { width: 200px; }
+
+@media (max-width: 1000px) {
+  .nav_li {
+    float: none;
+  }
+  .nav_a {
+    width: 100%;
+  }
+  body {
+    font-size: 2em;
+  }
+}
