--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,10 @@
-.nav_ul {
+ul, ol {
+	padding-left: 1em;
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
+nav ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -6,11 +12,11 @@
 	background-color: #333;
 }
 
-.nav_li {
+nav li {
 	float: left;
 }
 
-.nav_a {
+nav a {
 	display: inline-block;
 	color: white;
 	text-align: center;
@@ -19,7 +25,7 @@
 	font-weight: bold;
 }
 
-.nav_a:hover {
+nav a:hover {
 	background-color: #111;
 }
 
@@ -30,13 +36,13 @@
 img[alt=bild] { width: 200px; }
 
 @media (max-width: 1000px) {
-  .nav_li {
+  nav li {
     float: none;
     border-bottom-style: solid;
     border-width: 1px;
     border-color: gold;
   }
-  .nav_a {
+  nav a {
     width: 100%;
   }
   body {
