--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,16 @@
 </head>
 <body>
 {% include navigation.html %}
-{{ content }}
+	<table style="width:100%">
+		<tr>
+			<td class="spacer">
+			</td>
+			<td>
+				{{ content }}
+			</td>
+			<td class="spacer">
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
