--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav>
 	<ul>{% for item in site.data.navigation %}
-		<li><a href="{{ site.baseurl }}{{ item.link }}" {% if page.url == item.link %}class="current{"% endif %}>{{ item.name }}</a></li>{% endfor %}
+		<li><a href="{{ site.baseurl }}{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a></li>{% endfor %}
 	</ul>
 </nav>
