--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -37,7 +37,7 @@ nav {
 	color: gold;
 }
 
-img[alt=bild] { width: 200px; }
+img { width: 100%; }
 
 .spacer {
 	width: 19.1%;
@@ -59,5 +59,4 @@ img[alt=bild] { width: 200px; }
   .spacer {
 	  width: 0;
   }
-  img[alt=bild] { width: 100%; }
 }
