--- a/main.css
+++ b/main.css
@@ -1,9 +1,24 @@
----
----
+* {
+	font-family: "Barlow";
+	font-style: normal;
+	font-weight: 400;
+}
+
+a {
+	color: Black;
+	text-decoration-line: underline;
+	text-decoration-style: dotted; 
+	letter-spacing: 1px;
+}
+
 ul, ol {
 	padding-left: 1em;
 	margin-top: 1em;
 	margin-bottom: 1em;
+}
+
+nav div {
+	background-color: Red;
 }
 
 nav ul {
@@ -11,7 +26,10 @@ nav ul {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: #333;
+	/*background-color: #333;*/
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-width: 1px;
 }
 
 nav li {
@@ -20,7 +38,7 @@ nav li {
 
 nav a {
 	display: inline-block;
-	color: white;
+	color: black;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
@@ -28,7 +46,8 @@ nav a {
 }
 
 nav a:hover {
-	background-color: #111;
+	/*background-color: #111;*/
+	text-decoration: overline underline;
 }
 
 nav {
@@ -36,7 +55,8 @@ nav {
 }
 
 .current {
-	color: gold;
+	color: GoldenRod;
+	text-decoration: overline underline;
 }
 
 img { width: 100%; }
